index.html header, main and footer tags addition

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>Calculator. A mere calculator.</h1>
+    </header>
+    <main>
+        
+    </main>
+    <footer>
+        <p>Created by ThatKit &copy; 2021</p>
+    </footer>
 </body>
 </html>
