integer buttons addition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
         <h1>Calculator. A mere calculator.</h1>
     </header>
     <main>
-        
+        <!--Calculation Field-->
+        <div id="calc-field"></div>
+        <!--Integer Buttons-->
+        <div id="integer-buttons">
+            <button class="integer" id="one">1</button>
+            <button class="integer" id="two">2</button>
+            <button class="integer" id="three">3</button>
+            <button class="integer" id="four">4</button>
+            <button class="integer" id="five">5</button>
+            <button class="integer" id="six">6</button>
+            <button class="integer" id="one">7</button>
+            <button class="integer" id="one">8</button>
+            <button class="integer" id="nine">9</button>
+        </div>
     </main>
     <footer>
         <p>Created by ThatKit &copy; 2021</p>
