--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             <button class="integer" id="one">8</button>
             <button class="integer" id="nine">9</button>
         </div>
+        <div id="operator-buttons">
+            <button class="operator" id="addition">&plus;</button>
+            <button class="operator" id="subtraction">&minus;</button>
+            <button class="operator" id="multiplication">&times;</button>
+            <button class="operator" id="division">&divide;</button>
+        </div>
+        <div id="other-buttons">
+            <button class="other" id="dot">,</button>
+            <button class="other" id="delete">delete</button>
+            <button class="other" id="equals">&equals;</button>
+        </div>
     </main>
     <footer>
         <p>Created by ThatKit &copy; 2021</p>
