--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             <button class="integer" id="one">8</button>
             <button class="integer" id="nine">9</button>
         </div>
+        <!--Operator Buttons-->
         <div id="operator-buttons">
             <button class="operator" id="addition">&plus;</button>
             <button class="operator" id="subtraction">&minus;</button>
             <button class="operator" id="multiplication">&times;</button>
             <button class="operator" id="division">&divide;</button>
         </div>
+        <!--Other Buttons-->
         <div id="other-buttons">
             <button class="other" id="dot">,</button>
             <button class="other" id="delete">delete</button>
