grid changes: integers layout

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button class="integer" id="one">7</button>
         <button class="integer" id="one">8</button>
         <button class="integer" id="nine">9</button>
+        <button class="integer" id="zero">0</button>
         <!--Operator Buttons-->
         <button class="operator" id="addition">&plus;</button>
         <button class="operator" id="subtraction">&minus;</button>
