grid changes: integers layout 2

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <button class="integer" id="four">4</button>
         <button class="integer" id="five">5</button>
         <button class="integer" id="six">6</button>
-        <button class="integer" id="one">7</button>
-        <button class="integer" id="one">8</button>
+        <button class="integer" id="seven">7</button>
+        <button class="integer" id="eight">8</button>
         <button class="integer" id="nine">9</button>
         <button class="integer" id="zero">0</button>
         <!--Operator Buttons-->
