in progress of fixing CSS layout

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="operator" id="division">&divide;</button>
         <!--Other Buttons-->
         <button class="other" id="dot">,</button>
-        <button class="other" id="delete">delete</button>
+        <button class="other" id="delete">del</button>
         <button class="other" id="equals">&equals;</button>
     </main>
     <footer>
